# hscfsm_bridge

./: CMakeLists.txt  README.md  package.xml
App/AgvTransportFsmTask/: AgvTransportFsmTask.cpp  AgvTransportFsmTask.h  README.md
App/AgvTransportFsmTask/utilClass/cpp/: Hsc3RobotMove.cpp  Hsc3apiInstance.cpp  OutSwapModule.cpp  navigation.cpp  vision_detection.cpp
App/AgvTransportFsmTask/utilClass/include/: Hsc3RobotMove.h  Hsc3apiInstance.h  OutSwapModule.h  navigation.h  vision_detection.h
App/MultiGripperFsmTask/: MultiGripperFsmTask.cpp  MultiGripperFsmTask.h
App/RubikCubeSolve/: README.md  autoRecord.sh  rubik_cube_solve_func.cpp  rubik_cube_solve_func.h  rubik_cube_solve_task.cpp  rubik_cube_solve_task.h
App/VoiceCtlRobFsmTask/: VoiceCtlRobRosFunc.cpp  VoiceCtlRobTask.cpp
App/VoiceCtlRobRosTask/: VoiceCtlRobRosFunc.h
App/pickplacetask/: README.md  pickplacetask.cpp  pickplacetask.h
appTEST/: VoiceCtlRobTask.cpp  VoiceCtlRobTask.h  pickplacetask.cpp  pickplacetask.h
framework/: HsTaskFramework.cpp  HsTaskFramework.h  ThreadPool.h  ThreadSem.h  commonType.h  fsm.hpp  fsmframeworkinterface.h
framework/loader/: HsTaskFsmFactory.cpp  HsTaskFsmFactory.h
launch/: PickPlaceTask.launch  VoiceCtlRobTask.launch
src/: HsFsmBridge.cpp  HsFsmBridge.h  main.cpp  test.cpp  testcpp
srv/: startTaskCmd.srv
test/: FSMTest.cpp
uiTest/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ros.pro  uiTest.pro  uiTest.pro.user.27f43ef
